Fixed title header spacing on double line

--- a/css/_op-business-trip-utils.scss
+++ b/css/_op-business-trip-utils.scss
@@ -89,6 +89,7 @@ $fs-10: clamp(6.48px, 1.8vw, 10pt);
     left: 5%;
     font-size: clamp(18px, 4vw, 27px);
     width: 73%;
+    margin-bottom: 10%;
   }
 
   .lesson-number {
@@ -174,7 +175,7 @@ $fs-10: clamp(6.48px, 1.8vw, 10pt);
   }
 
   main {
-    margin-top: clamp(70px, 18%, 160px);
+    margin-top: clamp(70px, 21%, 160px);
   }
 
   .biz-tip-content,
